--- a/Assembly-CSharp-vs.csproj
+++ b/Assembly-CSharp-vs.csproj
@@ -51,6 +51,7 @@
      <Compile Include="Assets\Scripts\CharController.cs" />
      <Compile Include="Assets\Scripts\CoinsGUIAppear.cs" />
      <Compile Include="Assets\Scripts\CreateTempPopUp.cs" />
+     <Compile Include="Assets\Scripts\FloatingImage.cs" />
      <Compile Include="Assets\Scripts\HorseGUIAppear.cs" />
      <Compile Include="Assets\Scripts\NotificationManager.cs" />
      <Compile Include="Assets\Scripts\ScoreImageAppear.cs" />
